# shared-hosting-src

./: How-to-run.md  Prom.txt  README.md  env  res.txt  true.md
nextjs-main-project/: .gitignore  next.config.ts  package-lock.json  package.json
nextjs-main-project/dashborad/dashboard_overview_1/: code.html
nextjs-main-project/dashborad/database_cluster/: code.html
nextjs-main-project/dashborad/domain_controller/: code.html
nextjs-main-project/dashborad/file_explorer/: code.html
nextjs-main-project/dashborad/global_shell/: code.html
nextjs-main-project/dashborad/instance_manager/: code.html
nextjs-main-project/rust/src/: Cargo.toml  auth.rs  main.rs  models.rs  storage.rs  truemoney.rs
nextjs-main-project/rust/storage/: hosting_services.json  redeemed_vouchers.json  refresh_sessions.json  topup_transactions.json  wallets.json
nextjs-main-project/rust/wasm-auth/: Cargo.toml
nextjs-main-project/rust/wasm-auth/src/: lib.rs
nextjs-main-project/scripts/: dev-rust.ps1  start-rust.ps1
nextjs-main-project/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
nextjs-main-project/src/app/admin-dashboard/: page.tsx
nextjs-main-project/src/app/admin-login/: page.module.css  page.tsx
nextjs-main-project/src/app/dashboard/: page.module.css  page.tsx
nextjs-main-project/src/app/login/: page.module.css  page.tsx
nextjs-main-project/src/components/: Footer.module.css  Footer.tsx  Navbar.module.css  Navbar.tsx
nextjs-main-project/src/lib/: adminClient.ts  adminSession.ts  authClient.ts  authSession.ts  topupClient.ts  wasmProof.ts
(+3 files in other folders)
