[package]
name = "reverz-session-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reverz-session-api"
path = "main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
jsonwebtoken = "9.3"

[dev-dependencies]
tower = "0.5"
